--- a/vue_shop/src/assets/css/global.css
+++ b/vue_shop/src/assets/css/global.css
@@ -1,8 +1,20 @@
 /* 全局样式表 */
-html,
-body,
-#add {
+html, body, #app{
     width: 100%;
-    padding: 0%;
-    margin: 0%;
+    height: 100%;
+    padding: 0;
+    margin: 0;
+}
+.el-breadcrumb {
+    margin-bottom: 15px;
+    font-size: 12px;
+}
+.el-card {
+    box-shadow: 0 1px 1px rgb(0,0,0.15) !important;
+}
+.el-table {
+    margin-top: 15px;
+}
+.el-pagination {
+    margin-top: 15px;
 }
