--- a/vue_shop/src/assets/css/global.css
+++ b/vue_shop/src/assets/css/global.css
@@ -19,3 +19,9 @@ html, body, #app{
 .el-pagination {
     margin-top: 15px;
 }
+.el-steps {
+    margin: 15px 0;
+}
+.ql-editor {
+    min-height: 300px;
+}
